--- a/app/components/errors/under_construction.html
+++ b/app/components/errors/under_construction.html
@@ -4,6 +4,6 @@
     Hi there! This page is currently under construction. Proceed if you like, but the information may not be up to date (or make sense at all for that matter).
   </p>
   <div class="back-container">
-    <a back> <sprite name="ion-chevron-left" size="18"></sprite> Back</a>
+    <a back-button> <sprite name="ion-chevron-left" size="18"></sprite> Back</a>
   </div>
 </div>
