--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -25,16 +25,16 @@
 
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a ng-click="newTab('https://github.com/johnhof/IceBuddy')">IceBuddy </a>
+              <a href="#repo/IceBuddy">IceBuddy </a>
             </li>
             <li>
-                <a href="#/mongoman">Mongoman</a>
+                <a href="#mongoman">Mongoman</a>
             </li>
             <li>
-              <a ng-click="newTab('https://github.com/johnhof/ApiTester')">ApiTester</a>
+              <a href="#repo/ApiTester">ApiTester</a>
             </li>
             <li>
-              <a ng-click="newTab('https://github.com/johnhof/JiraJockey')">JiraJockey</a>
+              <a href="#repo/JiraJockey">JiraJockey</a>
             </li>
           </ul>
 
