--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -9,7 +9,7 @@ $sprite-height: 40px;
   padding: 20px 0;
   text-align: center;
   position: relative;
-  // border-top: 1px solid $grey;
+  border-top: 1px solid $grey;
 
   &.light {
     color: $dark-grey;
