--- a/app/components/repo/repo.html
+++ b/app/components/repo/repo.html
@@ -3,7 +3,7 @@
     <header>
       <h1>{{repo.name}}</h1>
       <div>{{repo.description}}</div>
-      <a ng-href="repo.href" target="__blank">View on Github</a>
+      <a href="{{repo.href}}" target="__blank">View on Github</a>
     </header>
 
     <row>
