updating contact page

--- a/app/components/repo/repo.html
+++ b/app/components/repo/repo.html
@@ -39,7 +39,7 @@
 
       <div class="col-sm-6">
         <section>
-          <h2>README.md</h2>
+          <h2 class="readme">README.md</h2>
           <div class="content">
   <markdown class="markdown documentation" documentation="true" content="repo.readme"></markdown>
           </div>
