--- a/app/components/repo/repo.scss
+++ b/app/components/repo/repo.scss
@@ -34,13 +34,15 @@
     margin: 30px 0;
 
     h2 {
-      color: $dark-grey;
-      background-color: white;
       margin: 0;
       padding: 10px;
-
       color: white;
       background-color: $blue;
+      font-size: 2rem;
+
+      &.readme {
+        font-size: 2.7rem;
+      }
     }
 
     .content {
