--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -68,7 +68,7 @@ img {
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(245, 246, 247, 0);
+  background: $grey;
   z-index: -1;
 }
 
