--- a/app/components/repo/repo.html
+++ b/app/components/repo/repo.html
@@ -25,7 +25,7 @@
         </section>
 
         <section>
-          <h2>Files</h2>
+          <h2>Contents</h2>
           <div class="content">
             <a ng-repeat="item in repo.contents" class="line-wrap" href="{{item.href}}" target="__blank">
               <sprite ng-if="item.type == 'dir'" size="16" name="ion-ios-folder"></sprite>
