--- a/app/assets/styles/forms.scss
+++ b/app/assets/styles/forms.scss
@@ -62,15 +62,17 @@ input, textarea {
   border-radius: 0;
   outline: 0;
   min-height: 35px;
-
   background-color: rgba(0, 0, 0, 0.17);
   border: 0;
+  color: $light-grey;
 
   &[type="email"], &[type="password"], &[type="text"], &textarea {
     padding-left: 10px;
 
     &:required {
       &::-webkit-input-placeholder {
+        color: $grey;
+
         &:after {
           content: "*";
           padding-left: 5px;
@@ -83,7 +85,6 @@ input, textarea {
 }
 
 textarea {
-  // border: 1px solid $light-grey;
   padding: 10px;
 }
 
