--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -42,6 +42,7 @@ a, .sprite {
 
   &:focus {
     text-decoration: none;
+    outline: none;
   }
 }
 
@@ -57,6 +58,7 @@ img {
   margin-top: -21px;
 
   &.fullpage {
+    margin-top: 0;
     position: absolute;
     top: 0;
   }
@@ -253,6 +255,64 @@ ul {
     color: $blue;
     transition: $ease;
     cursor: pointer;
+  }
+}
+
+.ngdialog.ngdialog-theme-default.spinner-container .ngdialog-content {
+  background-color: transparent;
+
+  .spinner {
+    margin: 0 auto;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 10px;
+  }
+
+  .spinner > div {
+    background-color: $light-grey;
+    height: 100%;
+    margin: 2px;
+    width: 4px;
+    display: inline-block;
+
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out;
+  }
+
+  .spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+  }
+
+  .spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+
+  .spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+  }
+
+  .spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+  }
+
+  @-webkit-keyframes stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+    20% { -webkit-transform: scaleY(1.0) }
+  }
+
+  @keyframes stretchdelay {
+    0%, 40%, 100% {
+      transform: scaleY(0.4);
+      -webkit-transform: scaleY(0.4);
+    }  20% {
+      transform: scaleY(1.0);
+      -webkit-transform: scaleY(1.0);
+    }
   }
 }
 
