--- a/app/components/contact/contact.html
+++ b/app/components/contact/contact.html
@@ -17,15 +17,23 @@
     </div>
 
     <div class="col-sm-6">
-      <form id="contact-form" name="form" ng-class="{ 'ng-submitted' : form.submitted }" novalidate>
-        <div class="error main-error" ng-show="form.globalError">{{ form.globalError }}</div>
-        <input validate required type="text" ng-model="inputs.name" name="name" placeholder="Name">
-        <input validate required email type="email" ng-model="inputs.email" name="email" placeholder="Email">
-        <input validate required type="text" ng-model="inputs.subject" name="subject" placeholder="Subject">
-        <textarea validate required type="text" ng-model="inputs.message" name="message" placeholder="Message"></textarea>
-        <input class="button" type="button" ng-click="submit($event)" value="Submit">
-      </form>
+      <form name="form.contact" ng-class="{ 'ng-submitted' : form.contact.submitted }" novalidate>
+        <div class="error main-error" ng-show="form.contact.globalError">{{ form.contact.globalError }}</div>
 
+        <input validate required type="text" ng-model="inputs.name" name="name" placeholder="Name">
+
+        <input validate required email type="email" ng-model="inputs.email" name="email" placeholder="Email">
+
+        <input validate required type="text" ng-model="inputs.subject" name="subject" placeholder="Subject">
+
+        <textarea validate required type="text" ng-model="inputs.message" name="message" placeholder="Message"></textarea>
+
+        <div>
+          <input class="button col-sm-6" type="button" ng-click="submit($event)" value="Submit">
+
+          <p  class="success-message col-sm-6" ng-show="form.contact.success">{{form.contact.success}}</p>
+        </div>
+      </form>
     </div>
   </row>
 </div>
