--- a/app/components/contact/contact.html
+++ b/app/components/contact/contact.html
@@ -6,7 +6,7 @@
 
     <div class="col-sm-6">
       <p>
-        I currently reside in the shadyside neighborhood of Pittsburgh, PA. If you're from out of town, feel free to contact me through email, linkedin, or facebook. If you like my projects, follow me on github.
+        I currently reside in the shadyside neighborhood of Pittsburgh, PA. If you're from out of town, feel free to contact me through Email, Linkedin, or Facebook. If you like my projects, follow me on github.
       </p>
 
       <div class="social">
