fixed linking issue, removed bower install prompt

--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -3,6 +3,6 @@
     <sprite href="{{sprite.href}}" name="{{sprite.name}}" ng-repeat="sprite in sprites"></sprite>
   </center>
   <p>
-    <a ng-click="newTab(siteSrc.href)">{{siteSrc.text}}</a>
+    <a href="{{siteSrc.href}}" target="__blank">{{siteSrc.text}}</a>
   </p>
 </div>
