added resume link

--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -39,6 +39,7 @@
           </ul>
 
         </li>
+        <li><a href="{{links.resume.href}}" target="__blank">{{links.resume.path}}</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
