--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -29,3 +29,9 @@ html, body, #root {
   -ms-transition:     all 0.3s ease;
   -o-transition:      all 0.3s ease;
 }
+
+a {
+  color: inherit;
+  border: inherit;
+  text-decoration: inherit;
+}
